Class#newInstance() is deprecated